# morpho-gmsh

./: .gitignore  CMakeLists.txt  README.md
apigenerator/: generate.py
apigenerator/api/: GenApi.py
examples/: fromFile.morpho  geo.morpho  hollowcyl.morpho  occ.morpho  t1.msh  testgmshapi.morpho
share/help/: gmsh.md  gmshapi.md
share/modules/: gmsh.morpho
src/: CMakeLists.txt  gmshapi.c  gmshapi.h
